Hide contact page. Wrap up some styling fixes.

--- a/app/components/Products/products.module.scss
+++ b/app/components/Products/products.module.scss
@@ -63,6 +63,11 @@
 
                 &:hover {
                     background-color: $teal;
+                    color: $dark-teal;
+
+                    a {
+                        color: $dark-teal;
+                    }
                 }
 
                 h4 {
@@ -79,6 +84,7 @@
                     &:hover {
                         color: $dark-teal;
                         cursor: pointer;
+                        font-weight: 600;
                     }
                 }
             }
