--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -150,6 +150,7 @@ footer {
                         color: white;
                         text-decoration: none;
                         font-weight: 600;
+                        font-size: 0.8rem;
                         &:hover {
                             color: $black;
                         
